# stages-monitor

./: .gitignore  app.py  ble.py  requirements.txt  stages-monitor.code-workspace  stages.py
analysis/: ble-analysis.md  change-dream-30.json  change-dream-30.pcapng  change-dreamy-zhram.pcapng  change-workout-mode.pcapng  change-zhram-dreamy-shifting.pcapng  connect-shimano.json  connect-shimano.md  connect-shimano.pcapng  connect-sram-50-34x10-33.pcapng  connect-sram.md  process_pcap_json.py
heltec-gui/: CMakeLists.txt  heltec-gui.ino
sb20display/: CMakeLists.txt  platformio.ini
sb20display/include/: bytes.h  challenge.h  connector.h  listeners.h  model.h  service.h  view.h
sb20display/src/: bytes.cpp  challenge.cpp  connector.cpp  main.cpp  model.cpp  service.cpp  view.cpp
stages-qt-gui/: CMakeLists.txt  main.cpp
tools/: challenge_py2c.py  hex2dec_table.py  hr_strap.py
